@@ -446,6 +446,20 @@ name|Inject
 argument_list|(
 name|Constants
 operator|.
+name|SERVER_DOMAIN_LISTENERS_LIST
+argument_list|)
+specifier|protected
+name|List
+argument_list|<
+name|Object
+argument_list|>
+name|listeners
+decl_stmt|;
+annotation|@
+name|Inject
+argument_list|(
+name|Constants
+operator|.
 name|SERVER_PROJECT_LOCATIONS_LIST
 argument_list|)
 specifier|protected
@@ -841,6 +855,22 @@ operator|.
 name|addFilter
 argument_list|(
 name|filter
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|Object
+name|listener
+range|:
+name|listeners
+control|)
+block|{
+name|dataDomain
+operator|.
+name|addListener
+argument_list|(
+name|listener
 argument_list|)
 expr_stmt|;
 block|}
