@@ -49,6 +49,30 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|ObjectId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|Persistent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|access
 operator|.
 name|DataDomain
@@ -264,6 +288,20 @@ operator|.
 name|select
 operator|.
 name|SelectTranslatorFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostLoad
 import|;
 end_import
 
@@ -955,6 +993,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|LifecycleEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|resource
 operator|.
 name|ClassLoaderResourceLocator
@@ -1104,6 +1156,30 @@ operator|.
 name|Mockito
 operator|.
 name|mock
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|verify
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|when
 import|;
 end_import
 
@@ -1316,9 +1392,7 @@ block|{
 return|return
 operator|new
 name|ConfigurationTree
-argument_list|<
-name|DataChannelDescriptor
-argument_list|>
+argument_list|<>
 argument_list|(
 name|testDescriptor
 argument_list|,
@@ -1335,6 +1409,17 @@ init|=
 operator|new
 name|MockEventManager
 argument_list|()
+decl_stmt|;
+specifier|final
+name|TestListener
+name|mockListener
+init|=
+name|mock
+argument_list|(
+name|TestListener
+operator|.
+name|class
+argument_list|)
 decl_stmt|;
 name|Module
 name|testModule
@@ -1512,6 +1597,18 @@ argument_list|)
 expr_stmt|;
 name|ServerModule
 operator|.
+name|contributeDomainListeners
+argument_list|(
+name|binder
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|mockListener
+argument_list|)
+expr_stmt|;
+name|ServerModule
+operator|.
 name|contributeProjectLocations
 argument_list|(
 name|binder
@@ -1611,10 +1708,8 @@ name|String
 name|name
 parameter_list|)
 block|{
-comment|// ResourceLocator also used by JdbcAdapter to locate
-comment|// types.xml... if this is the request we are getting,
-comment|// just let
-comment|// it go through..
+comment|// ResourceLocator also used by JdbcAdapter to locate types.xml...
+comment|// if this is the request we are getting, just let it go through..
 if|if
 condition|(
 name|name
@@ -2321,6 +2416,96 @@ name|getAdapter
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// check that we have mock listener passed correctly
+name|Persistent
+name|mockPersistent
+init|=
+name|mock
+argument_list|(
+name|Persistent
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|ObjectId
+name|mockObjectId
+init|=
+name|mock
+argument_list|(
+name|ObjectId
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|mockObjectId
+operator|.
+name|getEntityName
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|"mock-entity-name"
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|mockPersistent
+operator|.
+name|getObjectId
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|mockObjectId
+argument_list|)
+expr_stmt|;
+name|domain
+operator|.
+name|getEntityResolver
+argument_list|()
+operator|.
+name|getCallbackRegistry
+argument_list|()
+operator|.
+name|performCallbacks
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_LOAD
+argument_list|,
+name|mockPersistent
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|mockListener
+argument_list|)
+operator|.
+name|postLoadCallback
+argument_list|(
+name|mockPersistent
+argument_list|)
+expr_stmt|;
+block|}
+specifier|static
+class|class
+name|TestListener
+block|{
+annotation|@
+name|PostLoad
+specifier|public
+name|void
+name|postLoadCallback
+parameter_list|(
+name|Object
+name|object
+parameter_list|)
+block|{
+block|}
 block|}
 block|}
 end_class
