@@ -16,6 +16,7 @@ Changes/New Features:
 CAY-1873 Move DataDomain cache configuration from the Modeler and into DI
 CAY-2258 DI: type-safe binding of List and Map
 CAY-2266 Move EventBridge implementations into autoloadable modules
+CAY-2267 Contribute lifecycle events listeners via DI
 
 Bug Fixes:
 
